# dvdlogo-gl

./: .clang-format  CMakeLists.txt
assets/: frag.glsl
cmake/: depends.cmake
include/: stb_image.h
include/KHR/: khrplatform.h
include/glad/: glad.h
lib/glad/: glad.cpp
src/: app_gl.h  main.cpp  util.cpp  util.h
src/shaders/: dotFS.glsl  dotVS.glsl
